# fmg-api-client

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/releases/: README.md  v0.1.0.md
scripts/: capture_fixtures.py
src/fmg_api_client/: __init__.py  py.typed
src/fmg_api_client/core/: __init__.py  client.py  exceptions.py  locking.py  models.py  session.py  tasks.py
src/fmg_api_client/managers/: __init__.py  base.py  blueprints.py  cli_templates.py  devices.py  install.py  meta_objects.py  metafields.py  policies.py  provisioning.py
src/fmg_api_client/versions/: __init__.py  base.py  detect.py  registry.py  v72.py  v74.py  v76.py
tests/fixtures/responses/v76/: address_objects_collection.json  cli_templates_collection.json  device_groups_collection.json  dynamic_variable_collection_74_on_76_error.json  dynamic_variable_collection_76.json  policy_packages_collection.json  service_objects_collection.json  sys_status.json
tests/unit/: test_client.py  test_detect.py  test_exceptions.py  test_fixtures_v76.py  test_locking.py  test_managers_devices.py  test_managers_metafields.py  test_managers_other.py  test_models.py  test_registry.py  test_session.py  test_tasks.py  test_versions_payloads.py  test_versions_urls.py
